--- a/js2.html
+++ b/js2.html
@@ -7,7 +7,7 @@ var c=prompt("Enter a no");
 var d=prompt("Enter a no");
 var e=prompt("Enter a no");
 var sum=parseInt(a)+parseInt(b)+parseInt(c)+parseInt(d)+parseInt(e);
-document.write("The sum is "+c);
+document.write("The sum is "+sum);
 alert("The sum is "+sum);
 var avg=sum/5;
 document.write("<br>");
