--- a/js6.html
+++ b/js6.html
@@ -9,6 +9,8 @@ document.write("<br>");
 document.write("The name is "+b);
 document.write("<br>");
 document.write("The salary is "+c);
+document.write("<br>");
+document.write("The empno is "+a+" The name is "+b+" The salary is "+c);
 </script>
 </head>
 </html>
