--- a/js7.html
+++ b/js7.html
@@ -2,8 +2,7 @@
 <head>
 <script>
 var a=prompt("Enter a number");
-var b=parseInt(a);
-switch(b)
+switch(parseInt(a))
 {
 case 1:document.write("one");
 break;
